--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     //for rendering .ftl pages
     implementation 'org.springframework.boot:spring-boot-starter-freemarker:2.3.5.RELEASE'
 
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+    implementation 'org.apache.commons:commons-lang3:3.10'
+
+    implementation 'org.springframework.security:spring-security-taglibs:5.4.2'
+    implementation 'javax.servlet.jsp:jsp-api:2.0'
 }
 
 test {
