--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - chmod +x gradlew
 
 script:
+  - ./gradlew build --stacktrace
   - ./gradlew sonarqube --stacktrace
 
 before_cache:
