Add an initial test class

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
 script:
   - ./gradlew build --stacktrace
-  - ./gradlew sonarqube --stacktrace
+#  - ./gradlew sonarqube --stacktrace
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
