--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto: update
 spring.jpa.show-sql: true
 spring.jpa.generate-ddl: true
-spring.datasource.url: ${DB_URL:jdbc:postgresql://localhost:5433/animal_db}
+spring.datasource.url: ${DB_URL:jdbc:postgresql://ec2-79-125-86-58.eu-west-1.compute.amazonaws.com:5432/d7birrtpj6fr78;DB}
 spring.datasource.username: ${DB_USERNAME:postgres}
 spring.datasource.password: ${DB_PASSWORD:postgres}
 
